<resources>
    <string name="app_name">MccTest</string>
        <string name="action_settings">Settings</string>
        <string name="hello_world">Hello world!</string>
        <string name="Add_New">Add New</string>
        <string name="edit">Edit Contact</string>
        <string name="delete">Delete Contact</string>
        <string name="title_activity_display_contact">DisplayContact</string>
        <string name="name">Name</string>
        <string name="age">Age</string>
        <string name="email">Email</string>
        <string name="phone">Phone</string>
        <string name="image">Image</string>
         <string name="save">Save</string>

    </resources>
