<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ripo.mcctest.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/ed1"
        android:layout_marginLeft="100dp"
        android:background="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/ed2"
        android:layout_marginLeft="100dp"
        android:background="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/ed3"
        android:layout_marginLeft="100dp"
        android:background="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/ed4"
        android:layout_marginLeft="100dp"
        android:background="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textSize="30sp"/>

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="112dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>


